config/oauth/route/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/part-of: service-provider-integration-operator
  name: spi-oauth
spec:
  port:
    targetPort: 8000
  to:
    kind: Service
    # NOTE: Kustomize doesn't seem to know about routes, so we have to use the "rendered" name here, not just the name
    # used in the kustomization, because kustomize would not replace it...
    name: spi-oauth-service
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
